--- a/.gitignore
+++ b/.gitignore
@@ -3705,3 +3705,171 @@ Temp/UnityTempFile-71b0c486c663a3a43baa26e3297f787b
 Temp/UnityTempFile-7a97af802f1d5cd4dbc34c2bdba5ef8e
 Temp/UnityTempFile-b6077be99f25daa47b316b8d14966a66
 Temp/UnityTempFile-f5ed9eb6192a33e44b2d36bbb7bf0f36
+Temp/UnityTempFile-fb02449f0fdf88142b9d4a0a61e38b03
+Temp/UnityTempFile-c82671f29e5a4e544aa2432d31730cf7
+Temp/UnityTempFile-bb5810014f2c9db4ba234084d253d038
+Temp/UnityTempFile-8abb40f9beb6597468f9b837a79da073
+Temp/UnityTempFile-5217a4daade629849a737d2e8d023e53
+Temp/UnityTempFile-4b54323e516da794fa17be4a36247b20
+Temp/UnityTempFile-245642961e1b3d54c9a2cb6639f844f7
+Library/StateCache/SceneView/b2baef-mainStage.json
+Library/StateCache/Hierarchy/9f9633-mainStage.json
+Library/shadercompiler-UnityShaderCompiler.exe2.log
+Library/shadercompiler-UnityShaderCompiler.exe1.log
+Library/ShaderCache/EditorEncounteredVariants
+Library/ScriptAssemblies/UnityEngine.UI.dll
+Library/ScriptAssemblies/UnityEngine.TestRunner.dll
+Library/ScriptAssemblies/UnityEditor.UI.dll
+Library/ScriptAssemblies/UnityEditor.TestRunner.dll
+Library/ScriptAssemblies/Unity.VSCode.Editor.dll
+Library/ScriptAssemblies/Unity.Timeline.Editor.dll
+Library/ScriptAssemblies/Unity.Timeline.dll
+Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll
+Library/ScriptAssemblies/Unity.TextMeshPro.dll
+Library/ScriptAssemblies/Unity.Rider.Editor.dll
+Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll
+Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll
+Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll
+Library/ScriptAssemblies/Assembly-CSharp.pdb
+Library/ScriptAssemblies/Assembly-CSharp.dll
+Library/metadata/fe/fecc3e7a0166a104cb810435f6fdf37b.resource
+Library/metadata/fe/fecc3e7a0166a104cb810435f6fdf37b.info
+Library/metadata/fe/fecc3e7a0166a104cb810435f6fdf37b
+Library/metadata/fd/fd3895a2d40b7c0438eb055779a0f92a.resource
+Library/metadata/fd/fd3895a2d40b7c0438eb055779a0f92a.info
+Library/metadata/fd/fd3895a2d40b7c0438eb055779a0f92a
+Library/metadata/f9/f977343db9b66614bb8c597d7f056c3b.resource
+Library/metadata/f9/f977343db9b66614bb8c597d7f056c3b.info
+Library/metadata/f9/f977343db9b66614bb8c597d7f056c3b
+Library/metadata/f9/f9035ee843ec05a48855d3f6893e34a0.info
+Library/metadata/f9/f9035ee843ec05a48855d3f6893e34a0
+Library/metadata/f1/f1e37c210ce0b5c45ac68b2d48770174.info
+Library/metadata/f1/f1e37c210ce0b5c45ac68b2d48770174
+Library/metadata/f1/f19e3fdb9c8082647a2c32beca28ba84.resource
+Library/metadata/f1/f19e3fdb9c8082647a2c32beca28ba84.info
+Library/metadata/f1/f19e3fdb9c8082647a2c32beca28ba84
+Library/metadata/e1/e1d79f4a0c7873742babc5f6e9ff800e.resource
+Library/metadata/e1/e1d79f4a0c7873742babc5f6e9ff800e.info
+Library/metadata/e1/e1d79f4a0c7873742babc5f6e9ff800e
+Library/metadata/da/da9ac25586ace6c4c81d6acd856f7cda.resource
+Library/metadata/da/da9ac25586ace6c4c81d6acd856f7cda.info
+Library/metadata/da/da9ac25586ace6c4c81d6acd856f7cda
+Library/metadata/d4/d4226b8c168232d41b75369019068706.resource
+Library/metadata/d4/d4226b8c168232d41b75369019068706.info
+Library/metadata/d4/d4226b8c168232d41b75369019068706
+Library/metadata/be/be64544bade297e4d872dd74c66256d2.resource
+Library/metadata/be/be64544bade297e4d872dd74c66256d2.info
+Library/metadata/be/be64544bade297e4d872dd74c66256d2
+Library/metadata/bd/bd83c36222ec1c0448601661f1573860.resource
+Library/metadata/bd/bd83c36222ec1c0448601661f1573860.info
+Library/metadata/bd/bd83c36222ec1c0448601661f1573860
+Library/metadata/bd/bd67058a6079faf40b2dbfb35ea160b1.resource
+Library/metadata/bd/bd67058a6079faf40b2dbfb35ea160b1.info
+Library/metadata/bd/bd67058a6079faf40b2dbfb35ea160b1
+Library/metadata/b7/b7c83d02d034c2b4c9fd14359cb69164.resource
+Library/metadata/b7/b7c83d02d034c2b4c9fd14359cb69164.info
+Library/metadata/b7/b7c83d02d034c2b4c9fd14359cb69164
+Library/metadata/b5/b527b67e65d45b741b1e55da12b8b297.resource
+Library/metadata/b5/b527b67e65d45b741b1e55da12b8b297.info
+Library/metadata/b5/b527b67e65d45b741b1e55da12b8b297
+Library/metadata/af/af63539a5e39c99489395bdea2471f60.resource
+Library/metadata/af/af63539a5e39c99489395bdea2471f60.info
+Library/metadata/af/af63539a5e39c99489395bdea2471f60
+Library/metadata/ad/ad9869d4800c2eb4d96fe6af321889da.resource
+Library/metadata/ad/ad9869d4800c2eb4d96fe6af321889da.info
+Library/metadata/ad/ad9869d4800c2eb4d96fe6af321889da
+Library/metadata/98/982b1896316155b4fbd2cc5cef6d79a6.resource
+Library/metadata/98/982b1896316155b4fbd2cc5cef6d79a6.info
+Library/metadata/98/982b1896316155b4fbd2cc5cef6d79a6
+Library/metadata/8b/8b76cff51a7d7e844b0adf5da4371ec6.resource
+Library/metadata/8b/8b76cff51a7d7e844b0adf5da4371ec6.info
+Library/metadata/8b/8b76cff51a7d7e844b0adf5da4371ec6
+Library/metadata/8a/8af9b84117aab4a48ba134e04951246a.resource
+Library/metadata/8a/8af9b84117aab4a48ba134e04951246a.info
+Library/metadata/8a/8af9b84117aab4a48ba134e04951246a
+Library/metadata/85/8581f806dddef8046b4942de05b897be.resource
+Library/metadata/85/8581f806dddef8046b4942de05b897be.info
+Library/metadata/85/8581f806dddef8046b4942de05b897be
+Library/metadata/81/81ac649d26a9a96419b76c635591f6d8.resource
+Library/metadata/81/81ac649d26a9a96419b76c635591f6d8.info
+Library/metadata/81/81ac649d26a9a96419b76c635591f6d8
+Library/metadata/80/80fb034c8a4b7fb4b9fe87b5eac8784f.resource
+Library/metadata/80/80fb034c8a4b7fb4b9fe87b5eac8784f.info
+Library/metadata/80/80fb034c8a4b7fb4b9fe87b5eac8784f
+Library/metadata/7e/7e0c321a53b744a4c93fd44a27213a48.resource
+Library/metadata/7e/7e0c321a53b744a4c93fd44a27213a48.info
+Library/metadata/7e/7e0c321a53b744a4c93fd44a27213a48
+Library/metadata/79/79ee7751ab191f548b7f3232381afa0a.resource
+Library/metadata/79/79ee7751ab191f548b7f3232381afa0a.info
+Library/metadata/79/79ee7751ab191f548b7f3232381afa0a
+Library/metadata/74/74079e3b043b8a549a28e1350566b7e0.resource
+Library/metadata/74/74079e3b043b8a549a28e1350566b7e0.info
+Library/metadata/74/74079e3b043b8a549a28e1350566b7e0
+Library/metadata/67/67535d6a9b045954e925424a157be5d5.resource
+Library/metadata/67/67535d6a9b045954e925424a157be5d5.info
+Library/metadata/67/67535d6a9b045954e925424a157be5d5
+Library/metadata/63/6349a640dc07c3b4389c205f5b5a5145.resource
+Library/metadata/63/6349a640dc07c3b4389c205f5b5a5145.info
+Library/metadata/63/6349a640dc07c3b4389c205f5b5a5145
+Library/metadata/5e/5e00c8451ea2f524faf2f8a6aa900971.resource
+Library/metadata/5e/5e00c8451ea2f524faf2f8a6aa900971.info
+Library/metadata/5e/5e00c8451ea2f524faf2f8a6aa900971
+Library/metadata/58/5802cc242c56cfa47a4b9ac4bb747662.resource
+Library/metadata/58/5802cc242c56cfa47a4b9ac4bb747662.info
+Library/metadata/58/5802cc242c56cfa47a4b9ac4bb747662
+Library/metadata/56/56e1d39a6a60ae047a0c3ba3540db2c4.resource
+Library/metadata/56/56e1d39a6a60ae047a0c3ba3540db2c4.info
+Library/metadata/56/56e1d39a6a60ae047a0c3ba3540db2c4
+Library/metadata/51/517cb4111b60bc444813bbc62a479e05.resource
+Library/metadata/51/517cb4111b60bc444813bbc62a479e05.info
+Library/metadata/51/517cb4111b60bc444813bbc62a479e05
+Library/metadata/4f/4f3eaea25b43dc848b0ad763fbaeea2e.info
+Library/metadata/4f/4f3eaea25b43dc848b0ad763fbaeea2e
+Library/metadata/4f/4f02814b62ca4c9469420ae40236bc23.resource
+Library/metadata/4f/4f02814b62ca4c9469420ae40236bc23.info
+Library/metadata/4f/4f02814b62ca4c9469420ae40236bc23
+Library/metadata/4e/4ef847b9581f57a43a2ed14ab7e6d52e.resource
+Library/metadata/4e/4ef847b9581f57a43a2ed14ab7e6d52e.info
+Library/metadata/4e/4ef847b9581f57a43a2ed14ab7e6d52e
+Library/metadata/4d/4d6d816408e48e7428e863203522508f.resource
+Library/metadata/4d/4d6d816408e48e7428e863203522508f.info
+Library/metadata/4d/4d6d816408e48e7428e863203522508f
+Library/metadata/4c/4cf5890d3d7b62049a4c759a2d2dbe16.resource
+Library/metadata/4c/4cf5890d3d7b62049a4c759a2d2dbe16.info
+Library/metadata/4c/4cf5890d3d7b62049a4c759a2d2dbe16
+Library/metadata/48/48283adefda01514e851c40517a63d59.resource
+Library/metadata/48/48283adefda01514e851c40517a63d59.info
+Library/metadata/48/48283adefda01514e851c40517a63d59
+Library/metadata/40/406c929b7299afb469c82778f8d15d5b.resource
+Library/metadata/40/406c929b7299afb469c82778f8d15d5b.info
+Library/metadata/40/406c929b7299afb469c82778f8d15d5b
+Library/metadata/31/31f5f9d19376b964da72874480ad63ea.resource
+Library/metadata/31/31f5f9d19376b964da72874480ad63ea.info
+Library/metadata/31/31f5f9d19376b964da72874480ad63ea
+Library/metadata/30/3042cf3ff6294a843b046ab6c3a7013f.info
+Library/metadata/30/3042cf3ff6294a843b046ab6c3a7013f
+Library/metadata/30/30114844b380b88418785402b1e582c0.resource
+Library/metadata/30/30114844b380b88418785402b1e582c0.info
+Library/metadata/30/30114844b380b88418785402b1e582c0
+Library/metadata/23/230d59294c9857140b63dd308ea4bd63.resource
+Library/metadata/23/230d59294c9857140b63dd308ea4bd63.info
+Library/metadata/23/230d59294c9857140b63dd308ea4bd63
+Library/metadata/1d/1df1429981f76644097c7fd47fc5f239.resource
+Library/metadata/1d/1df1429981f76644097c7fd47fc5f239.info
+Library/metadata/1d/1df1429981f76644097c7fd47fc5f239
+Library/metadata/1b/1b145bcffd767854fb0c71c37678ebaa.resource
+Library/metadata/1b/1b145bcffd767854fb0c71c37678ebaa.info
+Library/metadata/1b/1b145bcffd767854fb0c71c37678ebaa
+Library/metadata/16/162118c81ee5670438130a3f7ff20797.info
+Library/metadata/16/162118c81ee5670438130a3f7ff20797
+Library/metadata/12/128f815e3b0dabd47bdeaf040e24c421.info
+Library/metadata/12/128f815e3b0dabd47bdeaf040e24c421
+Library/metadata/0e/0ee79c63beb5fe44bb0e014d888228d6.resource
+Library/metadata/0e/0ee79c63beb5fe44bb0e014d888228d6.info
+Library/metadata/0e/0ee79c63beb5fe44bb0e014d888228d6
+Library/metadata/04/04277d6ad4d168c4d9dc0987a1268237.info
+Library/metadata/04/04277d6ad4d168c4d9dc0987a1268237
+Library/metadata/03/03c4a1ed121b58c4d85652dc3ff5d643.info
+Library/metadata/03/03c4a1ed121b58c4d85652dc3ff5d643
+Library/metadata/00/00000000000000004000000000000000.info
+Library/metadata/00/00000000000000004000000000000000
