--- a/.gitignore
+++ b/.gitignore
@@ -3873,3 +3873,5 @@ Library/metadata/03/03c4a1ed121b58c4d85652dc3ff5d643.info
 Library/metadata/03/03c4a1ed121b58c4d85652dc3ff5d643
 Library/metadata/00/00000000000000004000000000000000.info
 Library/metadata/00/00000000000000004000000000000000
+Library/StateCache/Hierarchy/9f9633-mainStage.json
+Library/StateCache/SceneView/b2baef-mainStage.json
