--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\Score.cs" />
      <Compile Include="Assets\Scripts\SelfDestructEnemy.cs" />
      <Compile Include="Assets\Scripts\Spawner.cs" />
+     <Compile Include="Assets\Scripts\SpawnPoint.cs" />
      <Compile Include="Assets\Scripts\WaveTimer.cs" />
      <Compile Include="Assets\Scripts\Weapon.cs" />
      <None Include="Assets\SimpleFX\Materials\UnlitVertexColour_Alpha.shader" />
