--- a/.gitignore
+++ b/.gitignore
@@ -5338,3 +5338,14 @@ Temp/UnityTempFile-bb5810014f2c9db4ba234084d253d038
 Temp/UnityTempFile-c82671f29e5a4e544aa2432d31730cf7
 Temp/UnityTempFile-fb02449f0fdf88142b9d4a0a61e38b03
 Library/metadata/e0/e09bedbc58747344daa5186acba08cae
+Library/ShaderCache/EditorEncounteredVariants
+Library/shadercompiler-UnityShaderCompiler.exe0.log
+Library/shadercompiler-UnityShaderCompiler.exe1.log
+Library/shadercompiler-UnityShaderCompiler.exe3.log
+Library/StateCache/Hierarchy/9f9633-mainStage.json
+Library/StateCache/SceneView/b2baef-mainStage.json
+Temp/UnityTempFile-00957e391d528544492fe15c5efbc9e0
+Temp/UnityTempFile-078ac872ad65b4b4db1e494335d1227c
+Temp/UnityTempFile-1d3219b690d0dd9498b09c08128c1b96
+Temp/UnityTempFile-245642961e1b3d54c9a2cb6639f844f7
+Temp/UnityTempFile-b78d1f0c74687db429dc4faebd3260f1
