Second Enemy Spawner
-Added a second spawner for a different enemy type

--- a/.gitignore
+++ b/.gitignore
@@ -5349,3 +5349,15 @@ Temp/UnityTempFile-078ac872ad65b4b4db1e494335d1227c
 Temp/UnityTempFile-1d3219b690d0dd9498b09c08128c1b96
 Temp/UnityTempFile-245642961e1b3d54c9a2cb6639f844f7
 Temp/UnityTempFile-b78d1f0c74687db429dc4faebd3260f1
+Library/metadata/a4/a458eb292d8ce3a4cb10d3a796527f89
+Library/metadata/a4/a458eb292d8ce3a4cb10d3a796527f89.info
+Library/ShaderCache/EditorEncounteredVariants
+Library/shadercompiler-UnityShaderCompiler.exe1.log
+Library/shadercompiler-UnityShaderCompiler.exe2.log
+Library/shadercompiler-UnityShaderCompiler.exe3.log
+Library/StateCache/Hierarchy/9f9633-mainStage.json
+Library/StateCache/SceneView/b2baef-mainStage.json
+Temp/UnityTempFile-00957e391d528544492fe15c5efbc9e0
+Temp/UnityTempFile-078ac872ad65b4b4db1e494335d1227c
+Temp/UnityTempFile-1d3219b690d0dd9498b09c08128c1b96
+Temp/UnityTempFile-245642961e1b3d54c9a2cb6639f844f7
