--- a/.gitignore
+++ b/.gitignore
@@ -5361,3 +5361,12 @@ Temp/UnityTempFile-00957e391d528544492fe15c5efbc9e0
 Temp/UnityTempFile-078ac872ad65b4b4db1e494335d1227c
 Temp/UnityTempFile-1d3219b690d0dd9498b09c08128c1b96
 Temp/UnityTempFile-245642961e1b3d54c9a2cb6639f844f7
+Temp/UnityTempFile-25808569a0a706c4abf97fcc0fb17eb0
+Temp/UnityTempFile-25ecd50234ccfc144bfa273ea4e2bd68
+Temp/UnityTempFile-79bff8eb2cd95ec46b8746a5257a11c8
+Temp/UnityTempFile-92a0d434a3a4ef14f891a87d1f709bba
+Temp/UnityTempFile-d159331f2d78bc24480a71ae389b3ac8
+Library/ScriptAssemblies/Assembly-CSharp.dll
+Library/ScriptAssemblies/Assembly-CSharp.pdb
+Library/StateCache/Hierarchy/9f9633-mainStage.json
+Library/StateCache/SceneView/b2baef-mainStage.json
